Fixed: flash message full transparency looks bad when overlapping article text

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -96,4 +96,6 @@ button, .button {
                                   not supported by any browser */
 }
 
-
+.ember-notify {
+  background-color: rgba(255, 255, 255, 0.9);
+}
